Update -> Handle indentation and change tab name to expressive value

--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISXHEL</title>
+    <title>PORTFOLIO | CARLOS AGUIAR</title>
 
     <link rel="stylesheet" href="./style.css">
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Caprasimo&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Loved+by+the+King&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caprasimo&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Loved+by+the+King&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.4/lottie.min.js"></script>
 </head>
@@ -25,12 +22,21 @@
         </div>
         <ul class="menu">
             <li><a href="#">Sobre</a></li>
-            <li><a target="_blank" href="https://br.linkedin.com/in/aguiar0x01"><i
-                        class="fa-brands fa-linkedin fa-xl"></i></a></li>
-            <li><a target="_blank" href="https://github.com/aguiar0x01"><i class="fa-brands fa-github fa-xl"></i></a>
+            <li>
+                <a target="_blank" href="https://br.linkedin.com/in/aguiar0x01">
+                    <i class="fa-brands fa-linkedin fa-xl"></i>
+                </a>
             </li>
-            <li><a target="_blank" href="https://www.salesforce.com/trailblazer/aguiar0x01"><i
-                        class="fa-brands fa-salesforce fa-xl"></i></a></li>
+            <li>
+                <a target="_blank" href="https://github.com/aguiar0x01">
+                    <i class="fa-brands fa-github fa-xl"></i>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.salesforce.com/trailblazer/aguiar0x01">
+                    <i class="fa-brands fa-salesforce fa-xl"></i>
+                </a>
+            </li>
         </ul>
     </header>
 
